--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
     - docker
+env:
+    global:
+        - SHA=$(git rev-parse HEAD)
+        - CLOUD_SDK_CORE_DISABLE_PROMPTS=1
 before_install:
     #you need to add openssl commandd here after you encrypt your json file from travis ci
     - curl https://dsk.cloud.google.com | bash > /dev/null
@@ -18,3 +22,9 @@ before_install:
     
 script:
     - docker run -e CI=true tanmay8898/client npm test
+
+deploy:
+    provider: script
+    script: bash ./deploy.sh
+    on:
+        branch: master
